[package]
name = "netzwerk"
version = "0.1.0"
authors = ["/alex/ <Al3k5@protonmail.com>"]
edition = "2018"

[features]
# async version that uses async mpmc channels
# sync version that uses sync crossbeam channels

[dependencies]
async-std = "1.5.0"
async-trait = "0.1.24"
bincode = "1.2.1"
bus = "2.2.2"
crossbeam-channel = "0.4.0"
err-derive = "0.2.2"
futures = "0.3.4"
log = "0.4.8"
serde = { version = "1.0.104", features = ["derive"] }
url = "2.1.1"

[dev-dependencies]
crossterm = "0.16.0"
env_logger = "0.7.1"
pretty_env_logger = "0.4.0"
structopt = "0.3.9"
tokio = { version = "0.2.11", features = ["signal"] }
stream-cancel = "0.5.2"
